
- Tools
  - bxcommit: added support for converting growing to flat mode images
  - bxcommit: support command line options and non-interactive (quiet) mode

- SF patches applied
  [3505209] Fixed combo box size by Konrad Grochowski
  [2864391] Gui debugger default regs by Thomas Nilsen
  [3486555] Fix critical stack leak in Win32 GUI by Carlo Bramini

- these S.F. bugs were closed/fixed
  [3528809] IO APIC index register width
  [3528516] Missing #if in soundmod.h
  [3526069] MADT:Interrupt Source Override missed
  [3518753] update dump after manual chages to memory contents
  [3516859] bug in svn e1000 module
  [3516029] stepping not working in debugger GUI in case of smp vm
  [3510403] closing config dialog box closes entire simulator
  [3459998] Bochs cannot be compiled outside the source tree
  [2905969] can't use --enable-gdb-stub on vs2008
  [3294001] Bochs GUI doesn't appear properly for 2nd Bochs copy
  [3493315] Changing VGA 9/8 dot mode causes screen corruption

- these S.F. feature requests were closed/implemented
  [3519794] debugger's ability to save physical/linear memory dumps
  [1429612] Idea how to speedup simulation - stack direct access
  [1703452] Other Network Devices?
  [2919376] Disable show the console window
   [534271] can't set log action by device (bochsrc)

-------------------------------------------------------------------------
Changes in 2.5.1 (January 6, 2012):

- CPU / CPUDB
  ! Added Athlon64 (Venice) configuration to the CPUDB
  - BMI: fixed EFLAGS after BMI instructions
  - MSR: access to AMD extended MSR space was impossible due to a bug in RDMSR/WRMSR
  - VMX: fixed VMFUNC instruction behavior to align with Intel SDM revision 041
  - VMX: fixed Bochs PANIC when doing I/O access crossing VMX I/O permission bitmaps
  - VMX: fixed VirtualBox VMX guest Guru Meditation - FS.BASE got corrupted after
    saving/restoring unusable FS selector
  - VMX: fixed VirtualBox failures with VMX+EPT enabled